--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -111,4 +111,9 @@
     <!-- Home Screen Widget -->
     <string name="homeScreenWidgetAdded">%s widget added to home screen</string>
     <string name="settingsAddHomeScreenWidget">Home Screen Widget</string>
+
+    <!-- Voice Search  -->
+    <string name="voiceSearchIconContentDescription">Voice search</string>
+    <string name="voiceSearchListening">Listening…</string>
+    <string name="voiceSearchTitle">Voice search</string>
 </resources>
