--- a/app/src/main/res/layout-land/activity_voice_search.xml
+++ b/app/src/main/res/layout-land/activity_voice_search.xml
@@ -27,10 +27,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="@dimen/keyline_2"
+        android:ellipsize="end"
         android:gravity="center"
+        android:maxLines="2"
         android:text="@string/voiceSearchListening"
         android:textColor="?attr/normalTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/indicator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
